--- a/spring_04_todo/src/main/webapp/WEB-INF/web.xml
+++ b/spring_04_todo/src/main/webapp/WEB-INF/web.xml
@@ -34,5 +34,12 @@
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <!-- fileupload multipart conig maxSize set -->
+  <multipart-config>
+  	<max-file-size>104857600</max-file-size>
+  	<mqx-request-size>104857600</mqx-request-size>
+  	<file-size-threshold>0</file-size-threshold>
+  </multipart-config>
+  
 </web-app>
 
